update mobile number

--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
   </head>
   <body>
     <h3>My contact details</h3>
-    <p>Email address rajputdhanashri5@gmail.com</p>
-    <p>my Mobile Number +33768684457</p>
+    <p>Email address example.com</p>
+    <p>my Mobile Number 123456789</p>
     <p>My Office address Nokia Paris-Sacaly</p>
     <hr>
-    <form class="" action="mailto:rajputdhanashri5@gmail.com" method="post" enctype="text/plain">
+    <form class="" action="mailto:example@gmail.com" method="post" enctype="text/plain">
       <label>Your name</label>
       <input type="text" name="yourName" value=""><br>
       <label>Your email</label>
